# sqlite-amalg

./: CMakeLists.txt  GenerateAliases.cmake  Sqlite3Config.cmake.in  generate-amalgamation.sh
